--- a/admin/package.json
+++ b/admin/package.json
@@ -29,8 +29,10 @@
         "@babel/plugin-transform-runtime": "^7.25.9",
         "@babel/preset-env": "^7.13.15",
         "@babel/preset-react": "^7.13.13",
+        "@babel/preset-typescript": "^7.26.0",
         "@babel/register": "^7.13.14",
         "@babel/runtime": "^7.26.0",
+        "@types/jest": "^29.5.14",
         "@types/react": "^16.14.5",
         "@types/react-dom": "^16.9.12",
         "@types/react-router": "^5.1.13",
@@ -65,7 +67,8 @@
     "babel": {
         "presets": [
             "@babel/preset-env",
-            "@babel/preset-react"
+            "@babel/preset-react",
+            "@babel/preset-typescript"
         ],
         "plugins": [
             "@babel/plugin-transform-runtime"
