--- a/admin/package.json
+++ b/admin/package.json
@@ -49,7 +49,7 @@
         "react-test-renderer": "^18.0.0",
         "style-loader": "^3.3.3",
         "ts-loader": "^9.4.2",
-        "typescript": "4.9.4",
+        "typescript": "^5.7.3",
         "webpack": "^5.95.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.11.1",
