--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -1,10 +1,20 @@
 {
+    "$schema": "https://json.schemastore.org/tsconfig",
     "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["node_modules", "dist"],
     "compilerOptions": {
         "baseUrl": "./src",
-        "target": "es6",
-        "lib": ["es5", "es6", "dom"],
+        "target": "es2019",
+        "lib": ["es5", "es6", "es2019", "dom"],
+        "strict": true,
+        "exactOptionalPropertyTypes": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
         "noImplicitAny": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "noUncheckedIndexedAccess": true,
+        "noUnusedParameters": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "esModuleInterop": true,
@@ -13,6 +23,11 @@
         "module": "esnext",
         "jsx": "react",
         "allowJs": true,
-        "skipLibCheck": true
+        // Treat files as modules even if it doesn't use import/export
+        "moduleDetection": "auto",
+        // Disallow features that require cross-file awareness
+        "isolatedModules": true,
+        "skipLibCheck": false,
+        "outDir": "./dist"
     }
 }
