--- a/admin/package.json
+++ b/admin/package.json
@@ -10,9 +10,16 @@
         "node": ">=20"
     },
     "dependencies": {
+        "@types/colorbrewer": "^1.0.32",
+        "chart.js": "4.4",
+        "chartjs-adapter-luxon": "^1.3.1",
+        "chartjs-plugin-annotation": "^3.1.0",
+        "chartjs-plugin-zoom": "^2.2.0",
         "classnames": "^2.3.1",
+        "colorbrewer": "^1.5.9",
         "history": "^4.10.1",
         "html5-qrcode": "^2.3.8",
+        "luxon": "^3.5.0",
         "prop-types": "^15.7.2",
         "react": "^18.0.0",
         "react-day-picker": "^9.5",
@@ -32,6 +39,7 @@
         "@babel/preset-typescript": "^7.26.0",
         "@babel/register": "^7.13.14",
         "@babel/runtime": "^7.26.0",
+        "@jest/globals": "^29.7.0",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@types/react-router": "^5.1.13",
@@ -44,7 +52,6 @@
         "eslint": "^7.24.0",
         "eslint-plugin-react": "^7.23.2",
         "jest": "^29.7.0",
-        "@jest/globals": "^29.7.0",
         "react-test-renderer": "^18.0.0",
         "style-loader": "^3.3.3",
         "ts-loader": "^9.4.2",
