--- a/public/package.json
+++ b/public/package.json
@@ -12,9 +12,11 @@
     "devDependencies": {
         "@types/d3": "^7.4.3",
         "@types/d3-sankey": "^0.12.4",
+        "json5": "^2.2",
         "sass": "^1.85.0",
         "sass-loader": "^16.0.5",
         "ts-loader": "^9.5.2",
+        "tsx": "^4.19.3",
         "typescript": "^5.7.3",
         "webpack": "^5.98.0",
         "webpack-cli": "^5.0.1",
@@ -27,10 +29,13 @@
         "chart.js": "^2.9.4",
         "d3": "^7.9.0",
         "d3-sankey": "^0.12.3",
-        "markdown-it": "^12.2.0",
+        "i18next": "^24.2.2",
+        "i18next-browser-languagedetector": "^8.0.4",
+        "markdown-it": "^14.1.0",
         "preact": "^10.15.1",
         "preact-render-to-string": "^6.3.1",
-        "react-calendly": "^4.1.1"
+        "react-calendly": "^4.1.1",
+        "react-i18next": "^15.4.1"
     },
     "scripts": {
         "build": "./node_modules/.bin/webpack",
