Add json5 plugin as recommended to the workspace.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "charliermarsh.ruff",
         "redhat.vscode-yaml",
         "ms-python.mypy-type-checker",
-        "dbaeumer.vscode-eslint"
+        "dbaeumer.vscode-eslint",
+        "blueglassblock.better-json5"
     ]
 }
