--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
     "editor.formatOnSave": true,
     "ruff.format.args": ["--line-length", "120"],
     "mypy.runUsingActiveInterpreter": true,
-    "eslint.workingDirectories": ["./admin"]
+    "eslint.workingDirectories": ["./admin"],
+    "[json5]": {
+        "editor.defaultFormatter": "BlueGlassBlock.better-json5"
+    }
 }
