readable docker image dependency versions
Since we've already locked down the exact images we want with `@sha256:...` we might as well include the human readable version of the name :)

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.11-alpine@sha256:5d769f990397afbb2aca24b0655e404c0f2806d268f454b052e81e39d87abf42
+# syntax=docker/dockerfile:1.11
+FROM python:3.11.5-alpine3.18.3@sha256:5d769f990397afbb2aca24b0655e404c0f2806d268f454b052e81e39d87abf42
 
 RUN mkdir /work
 
