--- a/admin/package.json
+++ b/admin/package.json
@@ -44,6 +44,7 @@
         "@types/react-dom": "^18.0.0",
         "@types/react-router": "^5.1.13",
         "@types/react-router-dom": "^5.1.7",
+        "@types/uikit": "^3.14.5",
         "@types/underscore": "^1.11.1",
         "babel-core": "^7.0.0-0",
         "babel-jest": "^29.7.0",
