--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -25,8 +25,8 @@ NamedAtomicLock
 dataclasses_json
 
 # Test requirements
-pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
-pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
+pytest # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
+pytest-xdist # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
 selenium
 faker
 dataclasses_json
