--- a/public/ts/locales/en/brand.json5
+++ b/public/ts/locales/en/brand.json5
@@ -1,4 +1,4 @@
 {
-    makerspace_name: "Stockholm&nbsp;Makerspace",
-    billing_address: "Stockholm&nbsp;Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm",
+    makerspace_name: "Stockholm\u00A0Makerspace",
+    billing_address: "Stockholm\u00A0Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm",
 }
