--- a/public/ts/locales/en/sidebar.json5
+++ b/public/ts/locales/en/sidebar.json5
@@ -5,5 +5,6 @@
     purchase_history: "Receipts",
     courses: "Courses",
     licenses: "Licenses and discounts",
+    wiki: "Wiki",
     pay: "Pay",
 }
