--- a/public/ts/locales/sv/sidebar.json5
+++ b/public/ts/locales/sv/sidebar.json5
@@ -5,5 +5,6 @@
     purchase_history: "Köphistorik",
     courses: "Kurser",
     licenses: "Licenser och rabatter",
+    wiki: "Wiki",
     pay: "Betala",
 }
