Update .prettierignore to speed up code formatting.

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,13 +1,16 @@
 # Downloaded files
 /public/static/uikit
+/public/static/uikit_old
 
 # Generated files
 **/package-lock.json
 /public/ts/generated_locales
 /public/ts/locales.ts
+/public/static/js
+/admin/dist
 
 # Jinja2 templates do not work well for some reason
 /api/src/templates/
 
-# Sql files in root folder (likely db dumps)
-*.sql
+# Various sql files in the root that one might have
+/*.sql
