--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -26,6 +26,7 @@ types-redis
 markdown
 NamedAtomicLock
 dataclasses_json
+pyserde
 
 # Test requirements
 pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
