Allow more containers to know URLs to the frontend.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,7 @@ services:
       MAILGUN_TO_OVERRIDE:
       HOST_PUBLIC: "${PROTOCOL}://${HOST_PUBLIC}"
       HOST_FRONTEND: "${PROTOCOL}://${HOST_FRONTEND}"
+      HOST_BACKEND: "${PROTOCOL}://${HOST_BACKEND}"
     depends_on:
       - api
     networks:
@@ -134,6 +135,7 @@ services:
       APIGATEWAY: "api"
       HOST_BACKEND: "${PROTOCOL}://${HOST_BACKEND}"
       HOST_PUBLIC: "${PROTOCOL}://${HOST_PUBLIC}"
+      HOST_FRONTEND: "${PROTOCOL}://${HOST_FRONTEND}"
       STRIPE_PUBLIC_KEY:
       VIRTUAL_HOST: "${HOST_PUBLIC}"
       LETSENCRYPT_HOST: "${HOST_PUBLIC}"
