--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 18.x
           cache: "npm"
       - name: Install Prettier
-        run: npm ci
+        run: npm ci --install-links=false
       - name: Auto-fix code formatting (Prettier)
         run: npx prettier --write .
 
