--- a/admin/package.json
+++ b/admin/package.json
@@ -27,7 +27,8 @@
         "react-router-dom": "^7.9",
         "react-select": "^5.9",
         "uikit": "^3.22.0",
-        "underscore": "^1.13.0"
+        "underscore": "^1.13.0",
+        "frontend_common": "file:../frontend_common"
     },
     "devDependencies": {
         "@babel/core": "^7.13.15",
