--- a/public/package.json
+++ b/public/package.json
@@ -21,7 +21,8 @@
         "webpack": "^5.98.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.11.1",
-        "webpack-merge": "^5.8.0"
+        "webpack-merge": "^5.8.0",
+        "frontend_common": "file:../frontend_common"
     },
     "dependencies": {
         "@types/markdown-it": "^12.2.1",
