--- a/public/ts/tsconfig.json
+++ b/public/ts/tsconfig.json
@@ -1,32 +1,50 @@
 {
+    "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
-        "target": "es6",
-        "lib": ["es5", "es6", "es2019", "dom"],
-        "noImplicitAny": true,
-        "strictNullChecks": true,
+        "baseUrl": "../",
+        "esModuleInterop": true,
         "exactOptionalPropertyTypes": true,
+        "forceConsistentCasingInFileNames": true,
+        "jsx": "react-jsx",
+        "jsxImportSource": "preact",
+        "lib": [
+            "es5",
+            "es6",
+            "es2019",
+            "dom"
+        ],
+        "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
         "noPropertyAccessFromIndexSignature": true,
         "noUncheckedIndexedAccess": true,
         "noUnusedParameters": true,
-        "forceConsistentCasingInFileNames": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "esModuleInterop": true,
-        "sourceMap": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "jsx": "react-jsx",
-        "jsxImportSource": "preact",
-        "strict": true,
-        "skipLibCheck": true,
-        "baseUrl": "../",
         "paths": {
-            "react": ["./node_modules/preact/compat/"],
-            "react-dom": ["./node_modules/preact/compat/"]
-        }
+            "react": [
+                "./node_modules/preact/compat/"
+            ],
+            "react-dom": [
+                "./node_modules/preact/compat/"
+            ]
+        },
+        "preserveConstEnums": true,
+        "removeComments": true,
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "strictNullChecks": true,
+        "target": "es2019"
     },
-    "include": ["*.ts", "*.tsx", "*.d.ts"]
+    "exclude": [
+        "node_modules",
+        "dist"
+    ],
+    "include": [
+        "*.ts",
+        "*.tsx",
+        "*.d.ts"
+    ]
 }
