Fix email dispatcher not having access to SMS auth, and thus couldn't send text messages.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,8 @@ services:
       MAILGUN_KEY:
       MAILGUN_FROM:
       MAILGUN_TO_OVERRIDE:
+      ELKS46_API_USER:
+      ELKS46_API_KEY:
       HOST_PUBLIC: "${PROTOCOL}://${HOST_PUBLIC}"
       HOST_FRONTEND: "${PROTOCOL}://${HOST_FRONTEND}"
       HOST_BACKEND: "${PROTOCOL}://${HOST_BACKEND}"
