--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,18 +3,18 @@
 exclude: "uikit-almost-flat.css$|^public/static/uikit"
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.5.0
+      rev: v6.0.0
       hooks:
           - id: trailing-whitespace
           - id: end-of-file-fixer
           - id: check-yaml
           - id: check-added-large-files
     - repo: https://github.com/astral-sh/ruff-pre-commit.git
-      rev: v0.6.9
+      rev: v0.13.2
       hooks:
           - id: ruff
           - id: ruff-format
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v3.1.0
+      rev: v4.0.0-alpha.8
       hooks:
           - id: prettier
