Moved locales to a shared config directory. Added support for selectively overriding locales.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -36,6 +36,7 @@ services:
       - ./public/scss:/work/scss
       - ./public/src:/work/src
       - ./frontend_common/src:/frontend_common/src
+      - ./config:/config:ro
     environment:
       DEV_RUN: "true"
 
