--- a/config/locales/sv/member_portal/member_page.json5
+++ b/config/locales/sv/member_portal/member_page.json5
@@ -57,7 +57,7 @@
         makerspace_access_also_activates_base_subscription: "Automatisk förnyelse av Makerspace Access kommer också aktivera automatisk förnyelse av basmedlemsskapet.",
         errors: {
             no_member_introduction_title: "Kan inte påbörja en prenumeration",
-            no_member_introduction: "Du måste genomgå en medlemsintroduktion innan du kan starta en prenumeration. Du kan hitta dem i <0>kalendern</0>.",
+            no_member_introduction: 'Du måste genomgå en medlemsintroduktion innan du kan starta en prenumeration. Du kan hitta dem i <a href="{{calendar_url}}">kalendern</a>.',
         },
         pay_dialog: {
             title: "Aktivera automatisk förnyelse",
