--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,6 +13,7 @@ RUN apk update \
        libffi-dev \
        libressl-dev \
        linux-headers \
+       inotify-tools \
     && rm -rf /var/cache/apk/*
 
 RUN mkdir -p /work/ && mkdir -p /work/logs
@@ -22,7 +23,8 @@ VOLUME /work/logs
 COPY default-product-image.png /work
 
 COPY requirements.txt /work
-COPY --from=config messages /config/messages
+COPY --from=config . /config
+COPY --from=scripts build_locales.py /scripts/
 
 RUN pip install -U pip
 RUN pip install -r /work/requirements.txt
@@ -30,6 +32,8 @@ RUN pip install -r /work/requirements.txt
 COPY run.sh dispatch_emails.sh accessy_syncer.sh /work/
 
 COPY src /work/src
+
+RUN python3 /scripts/build_locales.py --locale-path=/config/locales/ --locale-override-path=/config/locale_overrides --output-py=/work/src/i18n --default-locale=en --modules admin common
 
 EXPOSE 80
 
