--- a/config/locales/en/common/brand.json5
+++ b/config/locales/en/common/brand.json5
@@ -1,4 +1,5 @@
 {
     makerspace_name: "Our\u00A0Makerspace",
     billing_address: "Our\u00A0Makerspace - Makerville",
+    email: "example@mymakerspace.com",
 }
