--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-exclude: "uikit-almost-flat.css$|^public/static/uikit"
+exclude: "uikit-almost-flat.css$|^public/static/uikit|^public/ts/generated_locales/|^api/src/i18n/|^public/ts/locales.ts"
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v6.0.0
