Use _other instead of _many for plurals.

--- a/config/locales/en/member_portal/common.json5
+++ b/config/locales/en/member_portal/common.json5
@@ -5,13 +5,13 @@
     cancel: "Cancel",
     unit: {
         year_one: "year",
-        year_many: "years",
+        year_other: "years",
         month_one: "month",
-        month_many: "months",
+        month_other: "months",
         day_one: "day",
-        day_many: "days",
+        day_other: "days",
         piece_one: "piece",
-        piece_many: "pieces",
+        piece_other: "pieces",
     },
     priceUnit: "kr",
     logOut: "Log out",
