--- a/config/locales/sv/member_portal/common.json5
+++ b/config/locales/sv/member_portal/common.json5
@@ -5,13 +5,13 @@
     cancel: "Avbryt",
     unit: {
         year_one: "år",
-        year_many: "år",
+        year_other: "år",
         month_one: "månad",
-        month_many: "månader",
+        month_other: "månader",
         day_one: "dag",
-        day_many: "dagar",
+        day_other: "dagar",
         piece_one: "st",
-        piece_many: "st",
+        piece_other: "st",
     },
     priceUnit: "kr",
     logOut: "Logga ut",
