Build locales in admin container.

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:lts-alpine3.22@sha256:d2166de198f26e17e5a442f537754dd616ab069c47cc57b889310a717e0abbf9
 
 RUN apk add --no-cache tzdata && rm -rf /var/cache/apk/*
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 ENV TZ=Europe/Stockholm
 
 RUN mkdir -p /work/src && mkdir -p /work/dist/js
@@ -12,12 +13,16 @@ WORKDIR /work
 
 RUN npm ci --install-links=false
 
-COPY ./src/ /work/src
 COPY --from=frontend_common . /frontend_common
+COPY --from=config . /config
+COPY --from=scripts build_locales.py /scripts/
+COPY ./src/ /work/src
 COPY ./jestSetup.js /work/
 
 RUN npm run build
 RUN echo tsc --version
+
+RUN uv run /scripts/build_locales.py --locale-path=/config/locales --locale-override-path=/config/locale_overrides --output-json=/work/src/i18n/generated_locales --output-ts-type-definitions=/work/src/i18n/locales.ts --default-locale=en --modules admin common
 
 FROM nginx:alpine@sha256:74175cf34632e88c6cfe206897cbfe2d2fecf9bf033c40e7f9775a3689e8adc7
 
