--- a/admin/package.json
+++ b/admin/package.json
@@ -28,7 +28,10 @@
         "react-select": "^5.9",
         "uikit": "^3.22.0",
         "underscore": "^1.13.0",
-        "frontend_common": "file:../frontend_common"
+        "frontend_common": "file:../frontend_common",
+        "i18next": "^24.2.2",
+        "i18next-browser-languagedetector": "^8.0.4",
+        "react-i18next": "^15.4.1"
     },
     "devDependencies": {
         "@babel/core": "^7.13.15",
