--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -39,6 +39,8 @@ services:
     build:
       context: ./api
       dockerfile: TestDockerfile
+      additional_contexts:
+        config: ./config
     ports:
       - "5678:5678"
     networks:
