--- a/config/locales/sv/admin/box_terminator.json5
+++ b/config/locales/sv/admin/box_terminator.json5
@@ -1,8 +1,8 @@
 {
-    "view_label": "Visa",
-    "expires": "Utgår {{relative_time}}",
-    "can_be_terminated_in": "Kan termineras {{relative_time}}",
-    "can_terminate": "Kan termineras",
-    "enter_label_id": "Skriv in etikett-ID",
-    "no_matching_labels": "Inga matchande etiketter",
+    view_label: "Visa",
+    expires: "Utgår {{relative_time}}",
+    can_be_terminated_in: "Kan termineras {{relative_time}}",
+    can_terminate: "Kan termineras",
+    enter_label_id: "Skriv in etikett-ID",
+    no_matching_labels: "Inga matchande etiketter",
 }
