Add support for rotating storage labels.

--- a/config/locales/en/member_portal/labels.json5
+++ b/config/locales/en/member_portal/labels.json5
@@ -9,6 +9,7 @@
         MeetupNameTag: "Meetup name tag",
         DryingLabel: "Drying",
         WarningLabel: "Warning",
+        RotatingStorageLabel: "Rotating",
     },
     expires: "Valid until",
     expired: "Expired",
