--- a/config/locales/sv/member_portal/labels.json5
+++ b/config/locales/sv/member_portal/labels.json5
@@ -9,6 +9,7 @@
         MeetupNameTag: "Meetup-namnskylt",
         DryingLabel: "Torkning",
         WarningLabel: "Varning",
+        RotatingStorageLabel: "Roterande",
     },
     expires: "Gäller till och med",
     expired: "Gick ut",
