Improve Swedish localization for labels.

--- a/config/locales/sv/member_portal/labels.json5
+++ b/config/locales/sv/member_portal/labels.json5
@@ -58,9 +58,9 @@
         submitted_successfully: "Etiketten skickades in",
         failed_to_submit: "Misslyckades med att skicka in etikett",
         report: "Rapportera",
-        terminate: "Avsluta",
+        terminate: "Rensa bort",
         report_label: "Rapportera etikett",
-        terminate_label: "Avsluta etikett",
+        terminate_label: "Rensa bort etikett",
         can_terminate_after_observation: "Inte skannad efter utgång, kan inte rensas bort ännu.",
         can_terminate_in: "Kan rensas bort {{duration}}",
         write_a_message: "Skriv ett meddelande",
