--- a/config/locales/sv/admin/box_terminator.json5
+++ b/config/locales/sv/admin/box_terminator.json5
@@ -1,6 +1,7 @@
 {
     view_label: "Visa",
-    expires: "Utgår {{relative_time}}",
+    expires_future: "Utgår {{relative_time}}",
+    expires_past: "Utgick {{relative_time}}",
     can_be_terminated_in: "Kan termineras {{relative_time}}",
     can_terminate: "Kan termineras",
     enter_label_id: "Skriv in etikett-ID",
