WIP on automatic task delegation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       FIRSTRUN_AUTO_ADMIN_PASSWORD:
       MAKERSPACE_LOCAL_TIMEZONE:
       SLACK_BOT_TOKEN:
+      SLACK_TASK_LOG_CHANNEL_ID:
       TRELLO_KEY:
       TRELLO_TOKEN:
       TRELLO_BOARD_URL_TASKS:
@@ -137,6 +138,7 @@ services:
       ACCESSY_SPECIAL_LABACCESS_GROUP:
       ACCESSY_DO_MODIFY:
       SLACK_BOT_TOKEN:
+      SLACK_TASK_LOG_CHANNEL_ID:
       TRELLO_KEY:
       TRELLO_TOKEN:
       TRELLO_BOARD_URL_TASKS:
