Fix SLACK_FIRE_ALERT_CHANNEL_ID not being included in the containers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       MAKERSPACE_LOCAL_TIMEZONE:
       SLACK_BOT_TOKEN:
       SLACK_TASK_LOG_CHANNEL_ID:
+      SLACK_FIRE_ALERT_CHANNEL_ID:
       TRELLO_KEY:
       TRELLO_TOKEN:
       TRELLO_BOARD_URL_TASKS:
